@@ -64,13 +64,13 @@
         <?php print $offset; ?>
       </div>
     <?php endif; ?>
+    <div class="views-exposed-widget views-submit-button">
+      <?php print $button ?>
+    </div>
     <?php if (!empty($reset_button)): ?>
-      <div class="views-exposed-widget">
+      <div class="views-exposed-widget views-reset-button">
         <?php print $reset_button; ?>
       </div>
     <?php endif; ?>
-    <div class="views-exposed-widget">
-      <?php print $button ?>
-    </div>
   </div>
 </div>
